chore: fix image url

--- a/docs/os/개념/1.mdx
+++ b/docs/os/개념/1.mdx
@@ -40,7 +40,7 @@ export const Image = ({ src, size }) => {
 다만, 운영체제는 항상 컴퓨터가 부팅될 때 메모리 내 **커널 영역**이라는 공간에 따로 적재되어 실행된다.
 
 <Image
-  src="https://s3.us-west-2.amazonaws.com/secure.notion-static.com/b15571ba-622f-4329-b740-3a2e725dd980/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20221220%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20221220T140317Z&X-Amz-Expires=86400&X-Amz-Signature=9aa14ae3caa31da775b81c5f7643d96f22e88399011d970e99f8b2bc1b783cac&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22Untitled.png%22&x-id=GetObject"
+  src="https://user-images.githubusercontent.com/64428916/209461239-f936f5bd-dbb9-40a4-b995-20aaf73a5f11.png"
   size="400"
 />
 
@@ -48,7 +48,7 @@ export const Image = ({ src, size }) => {
 즉, 운영체제는 커널 영역에 적재되어 사용자 영역에 적재된 프로그램들에 자원을 할당하고 이들이 올바르게 실행되도록 돕는다.
 
 <Image
-  src="https://s3.us-west-2.amazonaws.com/secure.notion-static.com/fc80d280-cc54-4d63-bf77-dbff0433c239/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20221220%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20221220T141332Z&X-Amz-Expires=86400&X-Amz-Signature=3656f14080d4212079ad37a8d3c2d9a15c7d0abed1fe1e57ab7514043b28cd59&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22Untitled.png%22&x-id=GetObject"
+  src="https://user-images.githubusercontent.com/64428916/209461266-3b806782-2e9d-4966-9c51-f1afb2d00a38.png"
   size="500"
 />
 
@@ -83,7 +83,7 @@ export const Image = ({ src, size }) => {
 - **시스템 호출**(시스템 콜): 운영체제 서비스를 제공받기 위해 커널 모드로 전환하는 방법
 
 <Image
-  src="https://s3.us-west-2.amazonaws.com/secure.notion-static.com/07636f44-2b04-4415-8434-7836a3992f24/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20221220%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20221220T142122Z&X-Amz-Expires=86400&X-Amz-Signature=d51b868eb23ed11e9d082692d4f6ced9e095395256825496e3888808607c1666&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22Untitled.png%22&x-id=GetObject"
+  src="https://user-images.githubusercontent.com/64428916/209461276-81607c85-dc46-4ce9-b419-9feb9e798835.png"
   size="500"
 />
 
