--- a/docs/os/개념/2.mdx
+++ b/docs/os/개념/2.mdx
@@ -66,7 +66,7 @@ export const Image = ({ src, size }) => {
 ## 프로세스 상태와 게층 구조
 
 <Image
-  src="https://s3.us-west-2.amazonaws.com/secure.notion-static.com/d91ddd5f-bb22-456c-8f37-c1e20d424f6b/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20221220%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20221220T143643Z&X-Amz-Expires=86400&X-Amz-Signature=cb87370a44f8397a66ad27bdd3e74f4c10d837251b65e4d8fcd1194b78a20ba0&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22Untitled.png%22&x-id=GetObject"
+  src="https://user-images.githubusercontent.com/64428916/209461648-68db11d3-60c2-4208-a78b-c999cabbf896.png"
   size="700"
 />
 
