chore: eslint 추가 -> mdx lint 하고 싶음

--- a/docs/os/CPU-스케줄링-알고리즘.mdx
+++ b/docs/os/CPU-스케줄링-알고리즘.mdx
@@ -43,3 +43,41 @@ tags:
 우선순위 스케줄링은 근본적인 문제를 내포하고 있습니다.
 우선순위가 높은 프로세스를 우선 처리하는 방식이기에 우선순위가 낮은 프로세스는 우선순위가 높은 프로세스에 의해 실행이 계속해서 연기될 수 있습니다.
 이를 `기아(starvation)현상`이라고 합니다. 우선순위가 높은 프로세스만 계속 먼저 실행되니 우선순위가 낮은 프로세스의 실행은 계속 뒤로 밀리는 것이죠.
+
+> 에이징(aging)
+> 오랫동안 대기한 프로세스의 우선순위를 점차 높이는 방식입니다. 에이징 기법을 적용하면 우선순위가 낮아 마냥 기다리기만 하는 프로세스가 없어집니다.
+> 우선순위가 낮더라도 언젠가는 높은 우선순위가 될 수 있습니다.
+
+## 다단계 큐 스케줄링(Multilevel Queue Scheduling)
+
+다단계 큐 스케줄링은 우선순위별로 준비 큐를 여러개 사용하는 스케줄링 방식입니다.  
+다단계 큐 스케줄링 하에서는 우선순위가 가장 높은 큐에 있는 프로세스들을 먼저 처리하고, 우선순위가 가장 높은 큐가 비어 있으면 그다음 우선순위 큐에 있는 프로세스들을 처리합니다.
+
+이렇게 큐를 여러를 두면 프로세스 유형별로 우선순위를 구분하여 실행하는 것이 편리해집니다.
+가령 어떤 큐에는 우선순위가 비교적 높아야 하는 CPU 집중 프로세스가 삽입될 수 있고, 어떤 큐는 우선순위가 비교적 낮아도 상관없는 입출력 집중 프로세스가 삽입될 수 있습니다.
+
+또한 큐별로 타임 슬라이스를 여러개 지정할 수도 있고, 큐마다 다른 스케쥴링 알고리즘을 사용할 수도 있습니다.
+
+## 다단계 피드백 큐 스케줄링(Multilevel Feedback Queue Scheduling)
+
+다단계 피드백 큐 스케줄링은 다단계 큐 스케줄링의 발전된 형태입니다. 앞서 설명한 다단계 큐 스케줄링에서는 프로세스들이 큐 사이를 이동할 수 없습니다.
+그러나 이런 방식대로라면 우선순위가 낮은 프로세스는 계속 연기될 여지가 있습니다. 즉, 다시 한번 기아 현상이 발생할 수 있습니다.
+
+언제 높은 우선순위의 프로세스가 들어올지 모르는데, 우선순위가 낮은 프로세스 입장에서는 매우 불리하겠죠. 이를 보완한 스케줄링 알고리즘이 다단계 피드백 큐 스케줄링입니다.
+
+다단계 피드백 큐 스케줄링에서는 프로세스가 큐 사이를 이동할 수 있습니다. 다단계 피드백 큐 스케줄링에서 새로 준비 상태가 된 프로세스가 있다면
+가장 높은 우선순위 큐에 삽입되고 일정 시간(타임 슬라이스)동안 실행됩니다.
+
+그리고 만약 프로세스가 해당 큐에서 실행이 끝나지 않는다면 다음 우선순위 큐에 삽입되어 실행됩니다. 그리고 또 해당 큐에서 실행이 끝나지 않는다면
+프로세스는 또 아믕 우선순위 큐에 삽입되고, 결국 CPU를 오래 사용해야 하는 프로세스는 점차 우선순위가 낮아집니다.
+
+즉, CPU를 비교적 오래 사용해야 하는 CPU 집중 프로세스들은 자연스레 우선순위가 낮아지고,
+CPU를 비교적 적게 사용하는 입출력 집중 프로세스들은 자연스레 우선순위가 높은 큐에서 실행이 끝납니다.
+
+다단계 피드백 큐 스케줄링은 프로세스들이 큐 사이를 이동할 수 있는 방식이기 때문에 낮은 우선순위 큐에서 너무 오래 기다리고 있는
+프로세스가 있다면 점차 우선순위가 높은 큐로 이동시키는 에이징 기법을 적용하여 기아 현상을 예방할 수 있습니다.
+
+즉, 다단계 피드백 큐 스케줄링 알고리즘은 어떤 프로세스의 CPU 이용 시간이 길면 낮은 우선순위 큐로 이동시키고,
+어떤 프로세스가 낮은 우선순위 큐에서 너무 오래 기다리면 높은 우선순위 큐로 이동시킬 수 있는 알고리즘입니다.
+
+다단계 피드백 큐 스케줄링은 구현이 복잡하지만, 가장 일반적인 스케줄링 알고리즘으로 알려져 있습니다.
