--- a/docs/os/개념/4.mdx
+++ b/docs/os/개념/4.mdx
@@ -38,9 +38,10 @@ export const Image = ({ src, size }) => {
 - 임계 구역: 동시에 실행하면 문제가 발생하는 자원에 접근하는 코드 영역
 - 레이스 컨디션: 잘못된 실행으로 인해 여러 프로세스가 동시 다발적으로 임계 구역의 코드를 실행하여 문제가 발생하는 경우
 
-::: 레이스 컨디션이 발생하는 근본적인 이유
+:::tip 레이스 컨디션이 발생하는 근본적인 이유
 : 여러 줄의 저급 언어로 변환된 고급 언어 한줄을 실행하는 과정에서 문맥 교환이 일어날 수 있다. 저급 언어를 실행하는 과정에서 문맥 교환이 일어날 때 문제가 발생할 수 있게 된다.
 
+:::
 
 - 운영체제는 임계 구역 문제를 세 가지 원칙 하에 해결한다.
     1. **상호 배제**: 한 프로세스가 임계 구역에 진입했다면 다른 프로세스는 임계 구역에 들어올 수 없다.
