--- a/docs/os/개념/4.mdx
+++ b/docs/os/개념/4.mdx
@@ -44,9 +44,9 @@ export const Image = ({ src, size }) => {
 :::
 
 - 운영체제는 임계 구역 문제를 세 가지 원칙 하에 해결한다.
-    1. **상호 배제**: 한 프로세스가 임계 구역에 진입했다면 다른 프로세스는 임계 구역에 들어올 수 없다.
-    2. **진행**: 임계 구역에 어떤 프로세스도 진입하지 않았다면 임계 구역에 진입하고자 하는 프로세스는 들어갈 수 있어야 한다.
-    3. **유한 대기**: 한 프로세스가 임계 구역에 진입하고 싶다면 그 프로세스는 언젠가는 임계 구역에 들어올 수 있어야 한다. (임계 구역에 들어오기 위해 무한정 대기해서는 안됨!)
+    - **상호 배제**: 한 프로세스가 임계 구역에 진입했다면 다른 프로세스는 임계 구역에 들어올 수 없다.
+    - **진행**: 임계 구역에 어떤 프로세스도 진입하지 않았다면 임계 구역에 진입하고자 하는 프로세스는 들어갈 수 있어야 한다.
+    - **유한 대기**: 한 프로세스가 임계 구역에 진입하고 싶다면 그 프로세스는 언젠가는 임계 구역에 들어올 수 있어야 한다. (임계 구역에 들어오기 위해 무한정 대기해서는 안됨!)
 
 ## 동기화 기법
 
