--- a/docs/os/개념/7.mdx
+++ b/docs/os/개념/7.mdx
@@ -106,8 +106,8 @@ export const Image = ({ src, size }) => {
     <Image src="https://user-images.githubusercontent.com/64428916/209499435-124c17b8-82f0-47da-8dc1-a26a5ce0f711.png" size="700" />
     
     → 파일 내 임의의 위치에 접근하기 쉽다.
-    
-    → 색인 블록 안에 파일을 구성하는 데이터 블록 주소가 있으므로 색인 블록만 알면 해당 파일 데이터에 접근할 수 있다. 따라서 디렉터리 엔드리에 **파일 이름**과 **색인 블록 주소**를 명시한다.
+    <br />
+    → 색인 블록 안에 파일을 구성하는 데이터 블록 주소가 있으므로 색인 블록만 알면 해당 파일 데이터에 접근할 수 있다. 따라서 디렉터리 엔트리에 **파일 이름**과 **색인 블록 주소**를 명시한다.
     
 - **FAT 파일 시스템**: FAT를 이용하는 연결 할당 기반의 파일 시스템
     
