--- a/docs/os/개념/6.mdx
+++ b/docs/os/개념/6.mdx
@@ -55,8 +55,7 @@ export const Image = ({ src, size }) => {
 
 - 연속 메모리 할당의 문제점
 
-    1) 외부 단편화
-
+    1) 외부 단편화 <br/>
     2) 물리 메모리보다 큰 프로세스를 실행할 수 없다.
 
     → **가상 메모리** - 실행하고자 하는 프로그램을 일부만 메모리에 적재하여 실제 물리 메모리 크기보다 더 큰 프로세스를 실행할 수 있게 하는 기술
@@ -66,38 +65,28 @@ export const Image = ({ src, size }) => {
     
 - 페이징: 물리 주소 공간을 프레임 단위로 자르고 프로세스의 논리 주소 공간을 페이지 단위로 자른 뒤 각 페이지를 프레임에 할당하는 가상 메모리 관리 기법
 - 프로세스가 메모리에 불연속적으로 배치되어 있다면 CPU는 이를 순차적으로 실행할 수 없다. 즉, ‘다음에 실행할 명령어 위치를 찾기가 어려워진다.
-  
-    → 이를 해결하기 위해 페이징 시스템은 CPU가 바라보는 주소인 논리 주소에는 연속적으로 배치되도록 페이지 테이블을 이용한다.
+  이를 해결하기 위해 페이징 시스템은 CPU가 바라보는 주소인 논리 주소에는 연속적으로 배치되도록 페이지 테이블을 이용한다.
     
 - 페이지 테이블을 통해 페이지가 적재된 프레임을 찾을 수 있다.
 
-    → 프로세스마다 각자의 프로세스 테이블이 있으며 각 페이지 테이블 정보들은 프로세스의 PCB에 기록된다.
-    → 프로세스의 페이지 테이블들은 메모리에 적재되어 있다.
+    - 프로세스마다 각자의 프로세스 테이블이 있으며 각 페이지 테이블 정보들은 프로세스의 PCB에 기록된다.
+    - 프로세스의 페이지 테이블들은 메모리에 적재되어 있다.
+    - 페이지 테이블에는 페이지 번호, 프레임 번호, 유효 비트, 보호 비트, 접근 비트, 수정 비트 등에 대한 정보가 있다.
 
-    → 페이지 테이블에는 페이지 번호, 프레임 번호, 유효 비트, 보호 비트, 접근 비트, 수정 비트 등에 대한 정보가 있다.
-
-    1)유효 비트: 현재 해당 페이지에 접근 가능한지 여부를 알려주는 비트, 페이지가 메모리에 적재되어 있지 않으면 페이지 폴트 발생
-
-    2) 보호 비트: 페이지에 접근할 권한을 제한하여 페이지를 보호하는 비트 (r - read, w - write, x - execute)
-
-    3) 참조 비트: 페이지에 접근한 적이 있는지 나타내는 비트
-
+    1)유효 비트: 현재 해당 페이지에 접근 가능한지 여부를 알려주는 비트, 페이지가 메모리에 적재되어 있지 않으면 페이지 폴트 발생 <br/>
+    2) 보호 비트: 페이지에 접근할 권한을 제한하여 페이지를 보호하는 비트 (r - read, w - write, x - execute) <br/>
+    3) 참조 비트: 페이지에 접근한 적이 있는지 나타내는 비트 <br/>
     4) 수정 비트: 해당 페이지가 수정된 적이 있는지 나타내는 비트
     
 - **PTBR**: 각 프로세스의 페이지 테이블이 적재된 주소를 가리킨다.
 - 페이지 테이블을 메모리에 두기 때문에 메모리 접근 시간이 두배로 늘어난다는 문제가 있다.
-
-    → 메모리에 있는 페이지 테이블을 보기 위해 한번, 그렇게 알게 된 프레임에 접근하기 위해 한번
-
-    → 이를 해결하기 위해 TLB 사용
+    - 메모리에 있는 페이지 테이블을 보기 위해 한번, 그렇게 알게 된 프레임에 접근하기 위해 한번
+    - 이를 해결하기 위해 TLB 사용
     
 - **TLB**: 페이지 테이블의 캐시 메모리 역할을 수행하기 위해 페이지 테이블의 일부를 저장한다.
-
-    → 주로 최근에 사용된 페이지 위주로 가져와 저장한다.
-
-    → CPU가 발생한 논리 주소에 대한 페이지 번호가 TLB에 있을 경우 TLB 히트라고 한다.
-
-    → 반대는 TLB 미스
+    - 주로 최근에 사용된 페이지 위주로 가져와 저장한다.
+    - CPU가 발생한 논리 주소에 대한 페이지 번호가 TLB에 있을 경우 TLB 히트라고 한다.
+    - 반대는 TLB 미스
     
 - 하나의 페이지 혹은 프레임은 여러 주소를 포괄하고 있다. 따라서 특정 주소에 접근하려면 아래 두 정보가 필요하다.
     - 어떤 페이지 혹은 프레임에 접근하고 싶은지 (페이지 번호)
