--- a/docs/computer-structure/개념/3.mdx
+++ b/docs/computer-structure/개념/3.mdx
@@ -11,27 +11,9 @@ tags:
   - 인터프리터 언어
 ---
 
-export const Image = ({ src, size }) => {
-  return (
-    <>
-      <img
-        src={src}
-        width={size}
-        height={size}
-        style={{
-          display: "block",
-          margin: "auto",
-        }}
-      />
-      <br />
-    </>
-  );
-};
-
-
+import Image from "../../../src/components/Image"
 
 ### 소스코드와 명령어
-
 
 - 고급 언어: 사람이 이해하고 작성하기 쉽게 만들어진 언어
 - 저급 언어: 컴퓨터가 직접 이해하고 실행할 수 있는 언어
@@ -48,68 +30,53 @@ export const Image = ({ src, size }) => {
   size="600"
 />
 
-
-
 <Image
   src="https://user-images.githubusercontent.com/64428916/210548097-2b31b68f-02c7-40c7-8a13-1b0b8eaf0b1b.png"
   size="600"
 />
-
-
 
 <Image
   src="https://user-images.githubusercontent.com/64428916/210548096-41338060-e2e9-4391-bf6d-0a4f429ee8cf.png"
   size="600"
 />
 
-
 - 명령어: 연산 코드와 오퍼랜드로 구성된다.
 - 연산 코드: 명령어가 수행할 연산을 의미
 - 오퍼랜드: 연산에 사용할 데이터 또는 연산에 사용할 데이터가 저장된 위치를 의미
 - 주소 지정 방식: 연산에 사용할 데이터 위치를 찾는 방법
 
-
-
 1. **즉시 주소 지정 방식**: 연산에 사용할 데이터를 오퍼랜드 필드에 직접 명시하는 방식<br/>
-→ 빠르다.
-<Image
-  src="https://user-images.githubusercontent.com/64428916/210548094-fd4206a9-dd67-4071-8b5b-85091b99e66e.png"
-  size="500"
-  />
+   → 빠르다.
 
-
+   <Image
+     src="https://user-images.githubusercontent.com/64428916/210548094-fd4206a9-dd67-4071-8b5b-85091b99e66e.png"
+     size="500"
+   />
 
 2. **직접 주소 지정 방식**: 오퍼랜드 필드에 유효 주소를 직접적으로 명시하는 방식<br/>
-→ 표현할 수 있는 오퍼랜드 필드의 길이가 연산 코드의 길이만큼 짧아져 표현할 수 있는 유효 주소에 제한이 생길 수 있다.
-<Image
-  src="https://user-images.githubusercontent.com/64428916/210548092-d2b86369-3982-4498-80c4-b9b1f20e1aa6.png"
-  size="500"
-/>
-
-
-    
+   → 표현할 수 있는 오퍼랜드 필드의 길이가 연산 코드의 길이만큼 짧아져 표현할 수 있는 유효 주소에 제한이 생길 수 있다.
+   <Image
+     src="https://user-images.githubusercontent.com/64428916/210548092-d2b86369-3982-4498-80c4-b9b1f20e1aa6.png"
+     size="500"
+   />
 3. **간접 주소 지정 방식**: 유효 주소의 주소를 오퍼랜드 필드에 명시한다.<br/>
-→ 일반적으로 느린 방식
-<Image
-  src="https://user-images.githubusercontent.com/64428916/210548090-b00f9e1f-c2cb-4c87-b918-664fb8564641.png"
-  size="500"
-/>
+   → 일반적으로 느린 방식
 
-
+   <Image
+     src="https://user-images.githubusercontent.com/64428916/210548090-b00f9e1f-c2cb-4c87-b918-664fb8564641.png"
+     size="500"
+   />
 
 4. **레지스터 주소 지정 방식**: 연산에 사용할 데이터를 저장한 레지스터를 오퍼랜드 필드에 직접 명시하는 방법<br/>
-→ 직접 주소 지정 방식보다 빠르게 데이터에 접근할 수 있다.<br/>
-→ 표현할 수 있는 레지스터 크기에 제한이 생길 수 있다.
-    
+   → 직접 주소 지정 방식보다 빠르게 데이터에 접근할 수 있다.<br/>
+   → 표현할 수 있는 레지스터 크기에 제한이 생길 수 있다.
+
 <Image
   src="https://user-images.githubusercontent.com/64428916/210548088-de98e2ea-1a1d-4b00-bb41-d83687b4837b.png"
   size="500"
 />
-    
 
-
-
-  5. **레지스터 간접 주소 지정 방식**: 연산에 사용할 데이터를 메모리에 저장하고 그 주소(유효 주소)를 저장한 레지스터를 오퍼랜드 필드에 명시하는 방법
+5. **레지스터 간접 주소 지정 방식**: 연산에 사용할 데이터를 메모리에 저장하고 그 주소(유효 주소)를 저장한 레지스터를 오퍼랜드 필드에 명시하는 방법
 
 <Image
   src="https://user-images.githubusercontent.com/64428916/210548084-da391877-2abb-4fa4-ae6c-4354be8616b6.png"
