chore: sidebar 설정 완료 ㅎㅎ

--- a/docs/data-structure/hash-table/index.mdx
+++ b/docs/data-structure/hash-table/index.mdx
@@ -1,3 +1,12 @@
+---
+id: hash-table
+title: Hash Table
+slug: /hash-table
+tags:
+  - Data Structure
+  - Hash Table
+---
+
 import Image from '../../../src/components/Image';
 
 # Hash Table
@@ -100,7 +109,6 @@ Array(91) [
 해시 테이블은 직접 주소 테이블처럼 값을 바로 테이블의 인덱스로 사용하는 것이 아니라 해시 함수에 한 번 통과
 시켜서 사용한다. 해시 함수는 임의의 길이를 가지는 임의의 데이터를 고정된 길이의 데이터로 매핑하는 함수이다.
 
-
 ## 해시의 충돌(Collision)
 
 다른 값을 해시 함수에 넣었지만 같은 값이 튀어나오는 것이 바로 충돌(Collision)이다.
@@ -121,7 +129,6 @@ Array(91) [
 어느 정도 충돌을 감안하되 최소화하기 위해 해시 함수의 알고리즘을 개발하거나, 혹은 충돌이 발생하더라도
 우회해서 해결할 수 있는 방법을 사용한다.
 
-
 ## Open Address 방식(개방주소법)
 
 해시 충돌이 발생하면, (즉 삽입하려는 해시 버킷이 이미 사용 중인 경우) 다른 해시 버킷에 해당 자료를 삽입하는
@@ -136,7 +143,7 @@ Array(91) [
 클러스터링(Clustering) 문제가 발생하고 이로인해 탐색과 삭제가 느려지게 된다.
 
 > 충돌 -> 데이터 덩어리 뒤에 충돌난 값 저장 -> 충돌 발생 확률 증가 -> 충돌 -> 또 저장. 덩어리 더 커짐 ->
-충돌 발생확률 증가 -> 충돌..
+> 충돌 발생확률 증가 -> 충돌..
 
 이런 식으로 무한 반복 사이클이 발생한다.
 
