docs: cpu 구조 (#11)
* docs: cpu 구조

* docs: cpu 구조 제어장치 부분

--- a/docs/computer-structure/CPU-구조.mdx
+++ b/docs/computer-structure/CPU-구조.mdx
@@ -1,6 +1,15 @@
+---
+title: 'CPU 구조'
+---
+
 import Image from '../../src/components/Image';
 
 # CPU 구조
+
+CPU가 메모리에 접근하는 속도는 레지스터에 접근하는 속도보다 훨씬 느립니다.
+ALU가 연산할 때마다 결과를 메모리에 저장한다면 당연하게도 CPU는 메모리에 자주 접근하게 되고,
+이는 CPU가 프로그램을 실행하는 속도를 늦출 수 있습니다. 그래서 ALU의 결괏값을 메모리가 아닌
+레지스터에 우선 저장하는 것입니다.
 
 ## ALU
 
@@ -9,6 +18,132 @@ import Image from '../../src/components/Image';
   height="250px"
 />
 
+ALU는 레지스터를 통해 피연산자를 받아들이고, 제어장치로부터 수행할 연산을 알려주는 제어 신호를 받아들인다.
+ALU는 레지스터와 제어장치로부터 받아들인 피연산자와 제어 신호로 산술연산, 논리 연산등 다양한 연산을 수행한다.
+
+ALU는 계산 결과와 더불어 플래그를 내보낸다. 이진수만 봐서는 음수인지 양수인지 판단하기 어려울 때
+음수와 양수를 구분하기 위해 플래그를 사용한다. 이처럼 때때로 ALU는 결괏값뿐만 아니라 연산 결과에
+대한 추가적인 정보를 내보내야 할 때가 있다. 가령 연산 결과가 음수일 때, ALU는 '방금 계산한
+결과는 음수'라는 추가적인 정보를 내보낸다. 혹은 연산 결과를 담을 레지스터보다 클 때 ALU는 '결괏값이
+너무 크다'라는 추가적인 정보를 내보낸다.
+
+:::tip
+연산 결과가 연산 결과를 담을 레지스터보다 큰 상황을 오버플로우(overflow)라고 합니다.
+:::
+
+이러한 연산 결과에 대해 추가적인 상태 정보를 플래그(flag)라고 합니다. ALU가 내보내는 대표적인 플래그는
+아래와 같다.
+
+| 플래그 종류       | 의미                                                        | 사용 예시                                                                                                   |
+| ----------------- | ----------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------- |
+| 부호 플래그       | 연산의 결과의 부호를 나타낸다.                              | 부호 플래그가 1일 경우 계산 결과는 음수, 0일 경우 계산 결과는 양수를 의미한다.                              |
+| 제로 플래그       | 연산 결과가 0인지 여부를 나타낸다.                          | 제로 플래그가 1일 경우 연산 결과는 0, 0일 경우 연산 결과는 0이 아님을 의미한다.                             |
+| 캐리 플래그       | 연산 결과 올림수나 빌림수가 발생했는지를 나타낸다.          | 캐리 플래그가 1일 경우 올림수나 빌림수가 발생했음을 의미하고, 0일 경우 발생하지 않았음을 의미한다.          |
+| 오버플로우 플래그 | 오버플로우가 발생했는지를 나타낸다.                         | 오버플로우 플래그가 1일 경우 오버플로우가 발생했음을 의미하고, 0일 경우 발생하지 않았음을 의미한다.         |
+| 인터럽트 플래그   | 인터럽트가 가능한지를 나타낸다.                             | 인터럽트 플래그가 1일 경우 인터럽트가 가능함을 의미하고, 0일 경우 인터럽트가 불가능함을 의미한다.           |
+| 슈퍼바이저 플래그 | 커널 모드로 실행 중인지, 사용자 모드로 실행중인지 나타낸다. | 슈퍼바이저 플래그가 1일 경우 커널 모드로 실행 중임을 의미하고, 0일 경우 사용자 모드로 실행 중임을 의미한다. |
+
+<br />
+
+이러한 플래그는 CPU가 프로그램을 실행하는 도중 반드시 기억해야 하는 일종의 참고 정보이다.
+그리고 플래그들은 플래그 레지스터라는 레지스터에 저장된다. 플래그 레지스터는 이름 그대로 플래그 값들을
+저장하는 레지스터이다.
+
+<Image
+  src="https://user-images.githubusercontent.com/63354527/211131943-8f15d8a3-c850-4f1f-b9c8-94ecdbf23067.png"
+  referenceLink="https://user-images.githubusercontent.com/63354527/211131943-8f15d8a3-c850-4f1f-b9c8-94ecdbf23067.png"
+  description="플래그 레지스터"
+/>
+
+## 제어장치
+
+제어장치는 제어 신호를 내보내고, 명령어를 해석하는 부품이다. 그리고 제어 신호는 컴퓨터 부품을 관리하고
+작동시키기 위한 일종의 전기 신호이다.
+
+<Image
+  src="https://user-images.githubusercontent.com/64428916/210801528-2c412e22-eb2d-423a-bad7-3c92a04b8eac.png"
+  referenceLink="https://user-images.githubusercontent.com/64428916/210801528-2c412e22-eb2d-423a-bad7-3c92a04b8eac.png"
+  description="제어장치"
+/>
+
+<br />
+
+제어 장치는 클럭이라는 신호를 받아들인다. `클럭(clock)`이란 컴퓨터의 모든 부품을 일사분란하게 움직일 수
+있게하는 시간 단위이다. 클럭의 '똑-딱-똑-딱' 주기에 맞춰 한 레지스터에서 다른 레지스터로 데이터가
+이동되거나, ALU에서 연산이 수행되거나, CPU가 메모리에 저장된 명령어를 읽어들인다.
+
+다만, '컴퓨터의 모든 부품이 클럭 신호에 맞춰 작동한다'라는 말을 '컴퓨터의 모든 부품이 한 클럭마다 작동한다'
+라고 이해하면 안된다. 컴퓨터 부품들은 클럭이라는 박자에 맞춰 작동할 뿐 한 박자마다 작동하는 건 아니다.
+
+제어 장치는 해석해야 할 명령어를 받아들인다. CPU가 해석해야 할 명령어는 명령어 레지스터라는 특별한 레지스터에
+저장된다. 제어 장치는 이 명령어 레지스터로부터 해석할 명령어를 받아들이고 해석한 뒤, 제어 신호를 발생시켜
+컴퓨터 부품들에 수행해야 할 내용을 알려준다.
+
+제어 장치는 플래그 레지스터 속 플래그 값을 받아들인다. 플래그는 ALU 연산에 대한 추가적인 상태 정보이다.
+제어장치가 제어 신호를 통해 컴퓨터 부품들을 제어할 때 플래그 값을 받아들이고 이를 참고하여 제어 신호를
+발생시킨다.
+
+제어 신호는 CPU뿐만 아니라 입출력 장치를 비롯한 CPU 외부 장치도 발생시킬 수 있다. 제어 장치는
+제어 버스를 통해 외부로부터 전달된 제어 신호를 받아들이기도 한다.
+
+:::tip
+제어 장치는 CPU외부와 내부로 제어 신호를 내보낸다. 제어장치가 CPU 외부에 제어 신호를 전달한다는 말은
+곧, 제어 버스로 제어 신호를 내보낸다는 말과 같다. 이러한 제어 신호에는 크게 메모리에 전달하는 제어 신호와
+입출력장치(보조기억장치 포함)에 전달하는 제어 신호가 있다.
+
+제어 장치가 CPU 내부에 전달하는 제어 신호에는 크게 ALU에 전달하는 제어 신호와 레지스터에 전달하는
+제어 신호가 있다. ALU에는 수행할 연산을 지시하기 위해, 레지스터에는 레지스터 간에 데이터를 이동시키거나
+레지스터에 저장된 명령어를 해석하기 위해 제어 신호를 내보낸다.
+:::
+
 ## 레지스터
 
-##
+프로그램 속 명령어와 데이터는 실행 전후로 반드시 레지스터에 저장된다.
+따라서 레지스터에 저장된 값만 잘 관찰해도 프로그램의 실행 흐름을 파악할 수 있다.
+다시 말해 레지스터 속 값을 유심히 관찰하면 프로그램을 실행할 때 CPU 내에서 무슨 일이 벌어지고 있는지,
+어떤 명령어가 수행되는지 알 수 있다.
+
+CPU 내부에는 다양한 레지스터들이 있고, 각기 다른 역할을 가지고 있다.
+
+### 프로그램 카운터(PC: Program Counter)
+
+프로그램 카운터는 메모리에서 가져올 명령어의 주소, 즉 메모리에서 읽어 들일 명령어의 주소를 저장한다.
+프로그램 카운터를 명령어 포인터(Instruction Pointer)라고 부르는 CPU도 있다.
+
+### 명령어 레지스터(IR: Instruction Register)
+
+명령어 레지스터는 해석할 명령어, 즉 방금 메모리에서 읽어 들인 명령어를 저장하는 레지스터이다.
+제어장치는 명령어 레지스터 속 명령어를 받아들이고 이를 해석한 뒤 제어 신호를 내보낸다.
+
+### 메모리 주소 레지스터(MAR: Memory Address Register)
+
+메모리 주소 레지스터는 메모리 주소를 저장하는 레지스터이다.
+CPU가 읽어 들이고자 하는 주소 값을 주소 버스로 보낼 때 메모리 주소 레지스터를 거친다.
+
+### 메모리 버퍼 레지스터(MBR: Memory Buffer Register)
+
+메모리 버퍼 레지스터는 메모리와 주고받을 값(데이터와 명령어)을 저장하는 레지스터이다.
+즉, 메모리에 쓰고 싶은 값이나 메모리로부터 전달받은 값은 메모리 버퍼 레지스터를 거친다.
+CPU가 주소 버스로 내보낼 값이 메모리 주소 레지스터를 거친다면, 데이터 버스로 주고받을 값은
+메모리 버퍼 레지스터를 거친다.
+
+:::tip
+메모리 버퍼 레지스터는 메모리 데이터 레지스터(MDR: Memory Data Register)라고도 부른다.
+:::
+
+### 범용 레지스터(General Purpose Register)
+
+범용 레지스터(general purpose register)는 이름 그대로 다양하고 일반적인 상황에서 자유롭게
+사용할 수 있는 레지스터이다. 메모리 버퍼 레지스터는 데이터 버스로 주고받을 값만 저장하고,
+메모리 주소 레지스터는 주소 버스로 내보낼 주소값만 저장하지만, 범용 레지스터는 데이터와 주소를
+모두 저장할 수 있다. 일반적으로 CPU 안에는 여러 개의 범용 레지스터들이 있고, 현대 대다수 CPU는
+범용 레지스터를 가지고 있다.
+
+### 플래그 레지스터(Flag Register)
+
+플래그 레지스터는 ALU 연산 결과에 따른 플래그를 플래그 레지스터에 저장한다. 플래그 레지스터는
+연산 결과 또는 CPU 상태에 대한 부가적인 정보를 저장하는 장치이다.
+
+## Reference
+
+- 혼자 공부하는 컴퓨터 구조 & 운영체제
