docs: cpu interrupt

--- a/docs/computer-structure/CPU/CPU-구조.mdx
+++ b/docs/computer-structure/CPU/CPU-구조.mdx
@@ -2,7 +2,7 @@
 title: 'CPU 구조'
 ---
 
-import Image from '../../src/components/Image';
+import Image from '../../../src/components/Image';
 
 # CPU 구조
 
