--- a/docs/computer-structure/CPU/CPU-인터럽트.mdx
+++ b/docs/computer-structure/CPU/CPU-인터럽트.mdx
@@ -60,7 +60,33 @@ CPU가 중요한 작업을 처리해야 하거나 어떤 방해도 받지 않아
 
 CPU가 인터럽트 요청을 받아들이기로 했다면 CPU는 인터럽트 서비스 루틴이라는 프로그램을 실행한다.
 인터럽트 서비스 루틴(ISR: Interrupt Service Routine)은 인터럽트를 처리하기 위한 프로그램이다.
-인터럽트 핸들러(interrupt handler)라고도 부른다.
+인터럽트 핸들러(interrupt handler)라고도 부른다. 인터럽트 서비스 루틴은 '키보드가 어떤 인터럽트
+요청을 보냈을 때는 이렇게 작동한다.', '마우스가 어떤 인터럽트 요청을 보냈을 때는 이렇게 작동한다.',
+'프로그램에 어떤 문제가 생겼을 때는 어떻게 작동한다.'와 같이 어떤 인터럽트가 발생했을 때 해당
+인터럽트를 어떻게 처리하고 작동해야 할지에 대한 정보로 이루어진 프로그램이다.
+
+요컨대 'CPU가 인터럽트를 처리한다'라는 말은 '인터럽트 서비스 루틴을 실행하고, 본래 수행하던 작업으로
+다시 돌아온다'라는 말과 같다.
+
+인터럽트를 처리하는 방법은 입출력장치마다 다르므로 각기 다른 인터럽트 서비스 루틴을 가지고 있다.
+즉, 메모리에는 여러 개의 인터럽트 서비스 루틴이 저장되어 있다. 이들 하나하나가 '인터럽트가 발생하면
+어떻게 행동해야 할지를 알려주는 프로그램'이라고 보면 된다.
+
+CPU는 각기 다른 인터럽트 서비스 루틴을 구분할 수 있어야한다. CPU는 수많은 인터럽트 서비스 루틴을
+구분하기 위해 인터럽트 벡터를 이용합니다. 인터럽트 벡터(interrupt vector)는 인터럽트 서비스 루틴을
+식별하기 위한 정보이다. 인터럽트 벡터를 알면 인터럽트 서비스 루틴의 시작 주소를 알 수 있기 때문에
+CPU는 인터럽트 벡터를 통해 특정 인터럽트 서비스 루틴을 처음부터 실행할 수 있다.
+
+:::tip
+CPU는 하드웨어 인터럽트 요청을 보낸 대상으로부터 데이터 버스를 통해 인터럽트 벡터를 전달받는다.
+:::
+
+가령, CPU가 작업을 수행하는 도중 키보드 인터럽트가 발생하면 CPU는 인터럽트 벡터를 참조하여 키보드
+인터럽트 서비스 루틴의 시작 주소를 알아내고, 이 시작 주소부터 실행해 나가며 키보드 인터럽트 서비스
+루틴을 실행한다.
+
+인터럽트 서비스 루틴은 여느 프로그램과 마찬가지로 명령어와 데이터로 이루어져있다. 그렇기에 인터럽트
+서비스 루틴도 프로그램 카운터를 비롯한 레지스터를 사용하여 실행한다.
 
 ## Reference
 
