chore: 상대 경로에서 절대경로

--- a/docs/computer-structure/CPU/CPU-인터럽트.mdx
+++ b/docs/computer-structure/CPU/CPU-인터럽트.mdx
@@ -2,7 +2,7 @@
 title: 'CPU Interrupt'
 ---
 
-import Image from '../../../src/components/Image';
+import Image from '@site/src/components/Image';
 
 # 인터럽트(Interrupt)
 
