--- a/docs/data-structure/hash-table/index.mdx
+++ b/docs/data-structure/hash-table/index.mdx
@@ -7,7 +7,7 @@ tags:
   - Hash Table
 ---
 
-import Image from '../../../src/components/Image';
+import Image from '@site/src/components/Image';
 
 # Hash Table
 
