--- a/docs/os/공룡책/서론.mdx
+++ b/docs/os/공룡책/서론.mdx
@@ -45,7 +45,39 @@ import Image from '@site/src/components/image';
 자원을 할당할지 결정해야 한다.
 
 운영체제는 여러가지 입출력 장치와 사용자 프로그램을 제어해야한다. 따라서 운영체제는
-**제어 프로그램(Control Program)**이다.
+**제어 프로그램(Control Program)**이다. 제어 프로그램은 컴퓨터의 부적절한 사용을 방지하기 위해
+사용자 프로그램의 수행을 제어한다. 운영체제는 특히 입출력 장치의 제어와 작동에 깊게 관여한다.
+
+### 운영체제의 정의
+
+일반적으로 운영체제에 대한 적합한 정의는 없다. 운영체제는 유용한 컴퓨팅 시스템을 만드는 문제를
+해결할 수 있는 합리적인 방법을 제공하기 때문에 존재한다. **컴퓨터 시스템의 기본 목표는 프로그램을
+실행하고 사용자 문제를 더욱 쉽게 해결할 수 있게 하는 것이다.** 컴퓨터 하드웨어는 이 목표를
+가지고 구성된다. 오로지 하드웨어만으로는 사용하기가 쉽지 않으므로 응용 프로그램이 개발된다.
+이러한 프로그램에는 입출력 장치 제어와 같은 특정 공통 작업이 필요하다. 자원을 제어하고 할당하는
+일반적인 기능은 운영체제라는 하나의 소프트웨어로 통합된다.
+
+운영체제는 컴퓨터에서 항상 실행되는 프로그램(일반적으로 `커널`이라고 함)이다. 커널과 함께
+두 가지 다른 유형의 프로그램이 있다. 운영체제와 관련되어 있지만 반드시 커널의 일부일 필요는 없는
+**시스템 프로그램**과 시스템 작동과 관련되지 않은 모든 프로그램을 포함하는 **응용 프로그램**이다.
+
+## 컴퓨터 시스템의 구성(Computer System Organization)
+
+현대의 범용 컴퓨터 시스템은 하나 이상의 CPU와 구성요소와 공유 메모리 사이의 엑세스를 제공하는 공통
+**버스**를 통해 연결된 여러 장치 컨트롤러로 구성된다.
+
+일반적으로 운영체제는 각 장치 컨트롤러마다 **장치 드라이버**가 있다. 이 장치 드라이버는 장치
+컨트롤러의 작동을 잘 알고 있고 나머지 운영체제 장치에 대한 일관된 인터페이스를 제공한다.
+CPU와 장치 컨트롤러는 병렬로 실행되어 메모리 사이클을 놓고 경쟁한다. 공유 메모리를 질서 있게
+엑세스하기 위해 메모리 컨트롤러는 메모리에 대한 엑세스를 동기화한다.
+
+<Image
+  src="https://user-images.githubusercontent.com/63354527/211206564-07a8b409-d8d7-4b0b-923a-33179f65c452.png"
+  referenceLink="https://user-images.githubusercontent.com/63354527/211206564-07a8b409-d8d7-4b0b-923a-33179f65c452.png"
+  description="통상적인 PC 컴퓨터 시스템"
+/>
+
+### 인터럽트(Interrupts)
 
 ## Reference
 
