docs: limit register

--- a/docs/computer-structure/물리주소와-논리주소.mdx
+++ b/docs/computer-structure/물리주소와-논리주소.mdx
@@ -43,6 +43,27 @@ MMU는 CPU가 발생시킨 논리 주소에 베이스 레지스터 값을 더해
 베이스 레지스터는 프로그램의 가장 작은 물리 주소, 즉 프로그램의 첫 물리 주소를 저장하고, 논리주소는
 프로그램의 시작점으로부터 떨어진 거리이다.
 
+<Image
+  width="500px"
+  height="300px"
+  src="https://user-images.githubusercontent.com/63354527/211300438-139d494e-e61b-4c78-a615-ed02751b8d47.png"
+  referenceLink="https://user-images.githubusercontent.com/63354527/211300438-139d494e-e61b-4c78-a615-ed02751b8d47.png"
+  description="한계 레지스터"
+/>
+
+<br />
+
+프로그램의 논리 주소 영역을 벗어나는 명령은 다른 프로그램의 정보를 삭제할 수 있기 때문에 이러한
+명령어 실행을 방지하고 실행 중인 프로그램이 다른 프로그램에 영향을 받지 않도록 보호할 방법이
+필요하다. 이는 **한계 레지스터(limit register)**라는 레지스터가 담당한다.
+
+베이스 레지스터가 실행 중인 프로그램의 가장 작은 물리 주소를 저장한다면, 한계 레지스터는 논리 주소의
+최대 크기를 저장한다. 즉, 프로그램의 물리 주소 범위는 베이스 레지스터 값 이상, 베이스 레지스터 값 +
+한계 레지스터 값 미만이 된다.
+
+CPU가 접근하려는 논리 주소는 한계 레지스터가 저장한 값보다 커서는 안된다. 한계 레지스터보다 높은
+주소 값에 접근하는 것은 곧 프로그램의 범위에 벗어난 메모리 공간에 접근하는 것과 같기 때문이다.
+
 ## Reference
 
 - 혼자 공부하는 컴퓨터 구조 + 운영체제
