docs: os operations

--- a/docs/os/공룡책/서론.mdx
+++ b/docs/os/공룡책/서론.mdx
@@ -385,6 +385,43 @@ network, LAN)이나 InfiniBand와 같은 고속의 상호 연결망(interconnect
 클러스터의 각 컴퓨터에서 수행되는 분리된 요소로 나누는 작업을 포함한다. 전형적으로 이들 애플리케이션은
 클러스터의 각 계산 노드가 문제 일부를 해결한 후 모든 노드의 결과를 결합하여 최종 해답을 얻게 된다.
 
+:::info
+**HADOOP**
+
+Hadoop은 단순하고 저렴한 하드웨어 구성요소를 포함하는 클러스터형 시스템에서 대용량 데이터 세트
+(빅데이터)의 분산 처리에 사용되는 공개 소프트웨어 프레임워크이다. Hadoop은 단일 시스템에서 수천개의
+컴퓨팅 노드를 포함하는 클러스터로 확장되도록 설계되었다. 작업은 클러스터의 노드에 할당되며 Hadoop
+은 노드 간 통신을 정렬하여 처리할 병렬 계산을 관리하고 결과를 통합한다. Hadoop은 또한 노드의 장애를
+감지하고 관리하여 효율적이고 매우 안정적인 분산 컴퓨팅 서비스를 제공한다.
+Hadoop은 다음 세가지로 구성된다.
+
+1. 분산 컴퓨팅 노드에서 데이터와 파일을 관리하는 분산 파일 시스템
+2. YARN(YET ANOTHER RESOURCE NEGOTIATOR) 프레임워크는 클러스터 내의 자원을 관리하고
+   클러스터의 노드에 작업을 스케줄 한다.
+3. MapReduce 시스템은 클러스터의 노드에서 데이터를 병렬 처리할 수 있게 한다.
+
+:::
+
+## 운영체제의 작동(Operating System Operations)
+
+운영체제는 프로그램이 실행되는 환경을 제공한다. 내부적으로 운영체제는 여러 경로를 거쳐 구성되기 때문에
+운영체제마다 큰 차이를 보인다. 그러나 많은 공통점이 존재하고. 이 절에서는 그 공통점들에 대해 논의한다.
+
+컴퓨터의 전원을 켜거나 재부팅할 때와 같이 컴퓨터를 실행하려면 초기 프로그램을 실행해야 한다. 앞에서
+언급했듯이 이 초기 프로그램 또는 부트스트랩 프로그램은 단순한 형태를 띠는 경향이 있다. 일반적으로
+부트스트랩 프로그램은 컴퓨터 하드웨어 내에 펌웨어로 저장된다.
+
+부트스트랩 프로그램은 CPU 레지스터에서 장치 컨트롤러, 메모리 내용에 이르기까지 시스템의 모든 측면을
+초기화한다. 부트스트랩 프로그램은 운영체제를 적재하는 방법과 해당 시스템 실행을 시작하는 방법을
+알아야 한다. 이 목표를 달성하려면 부트스트랩 프로그램이 운영체제 커널을 찾아 메모리에 적재해야 한다.
+
+커널이 적재되어 실행되면 시스템과 사용자에게 서비스를 제공할 수 있다. 일부 서비스는 커널이 실행되는
+전체 시간 동안 실행되는 시스템 데몬이 되기 위해 부팅할 때 메모리에 적재되는 시스셈 프로그램에 의해
+커널 외부에서 제공된다. Linux에서 첫 번째 세스템 프로그램은 'systemd'이며 다른 많은 데몬을
+시작한다. 이 단계가 완료되면 시스템은 완전히 부팅되고 시스템은 어떤 이벤트가 발생할 때까지 기다린다.
+
+### 1.4.1 멀티 프로그래밍과 멀티 태스킹(Multiprogramming and multitasking)
+
 ## Reference
 
 - Operating System Concepts(공룡책)
