--- a/docs/os/공룡책/서론.mdx
+++ b/docs/os/공룡책/서론.mdx
@@ -420,7 +420,13 @@ Hadoop은 다음 세가지로 구성된다.
 커널 외부에서 제공된다. Linux에서 첫 번째 세스템 프로그램은 'systemd'이며 다른 많은 데몬을
 시작한다. 이 단계가 완료되면 시스템은 완전히 부팅되고 시스템은 어떤 이벤트가 발생할 때까지 기다린다.
 
-### 1.4.1 멀티 프로그래밍과 멀티 태스킹(Multiprogramming and multitasking)
+### 멀티 프로그래밍과 멀티 태스킹(Multiprogramming and multitasking)
+
+운영체제의 가장 중요한 측면 중 하나는 하나의 프로그램은 일반적으로 항상 CPU나 I/O 장치를 항상
+바쁘게 유지할 수 없으므로 여러 프로그램을 실행할 수 있다는 것이다. 또한 사용자는 일반적으로
+한 번에 둘 이상의 프로그램을 실행하려고 한다. 다중 프로그래밍은 CPU가 항상 한 개는 실행할 수 있도록
+프로그램을 구성하여 CPU 이용률을 높이고 사용자 만족도를 높인다. 다중 프로그램 시스템에서 실행 중인
+프로그램을 **프로세스**라고 한다.
 
 ## Reference
 
