docs: 멀티 프로그래밍과 멀티 태스킹

--- a/docs/os/공룡책/서론.mdx
+++ b/docs/os/공룡책/서론.mdx
@@ -428,6 +428,32 @@ Hadoop은 다음 세가지로 구성된다.
 프로그램을 구성하여 CPU 이용률을 높이고 사용자 만족도를 높인다. 다중 프로그램 시스템에서 실행 중인
 프로그램을 **프로세스**라고 한다.
 
+운영체제는 여러 프로세스를 동시에 메모리에 유지한다. 운영체제는 이러한 프로세스 중 하나를 선택하여
+실행하기 시작한다. 결국 프로세스는 I/O 작업과 같은 일부 작업이 완료되기를 기다려야 할 수도 있다.
+다중 프로그래밍 되지 않은 시스템에서는 CPU가 유휴 상태가 발생할 수 있다. 다중 프로그램 시스템에서
+운영체제는 단순히 다른 프로세스로 전환하여 실행한다. 해당 프로세스가 대기해야 하는 경우 CPU는 다른
+프로세스로 전환한다. 결국 첫 번째 프로세스는 대기를 마치고 CPU를 다시 돌려받는다.
+
+<Image
+  src="https://user-images.githubusercontent.com/63354527/212238865-5cac0a60-f8c9-4f18-a6b6-dbc265317ea0.png"
+  referenceLink="https://user-images.githubusercontent.com/63354527/212238865-5cac0a60-f8c9-4f18-a6b6-dbc265317ea0.png"
+  description="다중 프로그래밍 시스템을 위한 메모리 배치"
+/>
+
+멀티 태스킹(multitasking)은 멀티 프로그래밍의 논리적 확장이다. 멀티 태스킹 시스템에서 CPU는 여러
+프로세스를 전환하며 프로세스를 실행하지만 전환이 자주 발생하여 사용자에게 빠른 응답 시간을 제공한다.
+프로세스가 실행될 때 일반적으로 프로세스가 완료되거나 I/O를 수행하기 전에 짧은 시간 동안만 실행된다는
+것을 고려하자. 입출력은 대화식일 수 있다. 즉, 출력이 사용자를 위해 디스플레이되고, 입력은 사용자 키보드,
+마우스 또는 터치 스크린으로부터 들어온다. 이러한 대화식 입력이 진행되는 동안 CPU를 쉬게 하지 않고,
+운영체제는 CPU를 다른 사용자의 프로그램으로 신속하게 전환한다.
+
+멀티 태스킹 시스템에서 운영체제는 적절한 응답 시간을 보장해야 한다. 적절한 응답 시간을 보장하는 더
+일반적인 방법은 가상 메모리(virtual memeory)인데, 이것은 일부만 메모리에 적재된 프로세스의 실행을
+허용하는 기법이다. 이 기법의 주요한 이점은 프로그램이 물리 메모리의 크기보다 더 커도 된다는 것이다.
+더욱이 가상 메모리는 메인 메모리를 크고 균등한 저장장치의 배열로 추상화하여, 사용자에게 보이는 논리
+메모리를 물리 메모리로부터 분리시킨다. 이러한 기법은 프로그래머를 메모리 저장장치의 한계로부터 자유롭게
+해준다.
+
 ## Reference
 
 - Operating System Concepts(공룡책)
