docs: 이중 모드와 다중모드

--- a/docs/os/공룡책/서론.mdx
+++ b/docs/os/공룡책/서론.mdx
@@ -420,9 +420,6 @@ Hadoop은 다음 세가지로 구성된다.
 커널 외부에서 제공된다. Linux에서 첫 번째 세스템 프로그램은 'systemd'이며 다른 많은 데몬을
 시작한다. 이 단계가 완료되면 시스템은 완전히 부팅되고 시스템은 어떤 이벤트가 발생할 때까지 기다린다.
 
-<<<<<<< HEAD
-### 1.4.1 멀티 프로그래밍과 멀티 태스킹(Multiprogramming and multitasking)
-=======
 ### 멀티 프로그래밍과 멀티 태스킹(Multiprogramming and multitasking)
 
 운영체제의 가장 중요한 측면 중 하나는 하나의 프로그램은 일반적으로 항상 CPU나 I/O 장치를 항상
@@ -456,8 +453,56 @@ Hadoop은 다음 세가지로 구성된다.
 더욱이 가상 메모리는 메인 메모리를 크고 균등한 저장장치의 배열로 추상화하여, 사용자에게 보이는 논리
 메모리를 물리 메모리로부터 분리시킨다. 이러한 기법은 프로그래머를 메모리 저장장치의 한계로부터 자유롭게
 해준다.
->>>>>>> 8504424 (docs: javascript 1 + 1 + '1')
 
-## Reference
+### 이중모드와 다중모드 운용(Dual Mode and Multimode Operation)
 
-- Operating System Concepts(공룡책)
+운영체제와 사용자는 컴퓨터 시스템의 하드웨어 및 소프트웨어 자원을 공유하기 때문에 올바르게
+설계된 운영체제는 잘못된 프로그램으로 인해 다른 프로그램 또는 운영체제가 잘못 실행될 수 없도록
+보장해야 한다. 시스템을 올바르게 실행하려면 운영체제 코드 실행과 사용자 정의 코드 실행을 구분할 수 있어야
+한다. 대부분의 컴퓨터 시스템이 취하는 접근 방식은 다양한 실행모드를 차별화 할 수 있는 하드웨어 자원을
+제공하는 것이다.
+
+적어도 두 개의 독립된 연산 모드, 즉 사용자 모드와 커널 모드[수퍼바이저 모드,
+시스템 모드], 혹은 **특권 모드**(privileged mode)를 필요로한다. 모드 비트(mode bit)라고
+하는 하나ㅡ이 비트가 현재의 모드를 나타내기 위해 컴퓨터의 하드웨어에 추가되었다. 이 비트는
+커널 모드(0) 또는 사용자 모드(1)을 나타낸다. 모드 비트의 사용으로, 우리는 운영체제를 위하여 실행되는
+작업과 사용자를 위해 실행되는 작업을 구분할 수 있다. 컴퓨터 시스템이 사용자의 애플리케이션을 위하여
+실행될 때 시스템은 사용자 모드에 있게 된다. 그러나 사용자 애플리케이션이 운영체제로부터 서비스를
+요청하면(시스템 콜을 통함) 이 요청을 수행하기 위해서는 사용자 모드에서 커널 모드로 전환해야 한다.
+
+시스템 부트 시, 하드웨어어는 커널 모드에서 시작한다. 이어 운영체제가 적재되고, 사용자 모드에서
+사용자 프로세스가 시작된다. 트랩이나 인터럽트가 발생할 때마다, 하드웨어는 사용자 모드에서
+커널 모드로 전환된다. 그러므로 운영체제가 컴퓨터의 제어를 얻을 때마다 항상 커널 모드에 있게 된다.
+시스템은 사용자 프로그램으로 제어를 넘기기 전에 항상 사용자 모드로 전환한다.
+
+<Image
+  src="https://user-images.githubusercontent.com/63354527/213631255-2f42fa14-1854-4ec4-869e-196d028c103a.png"
+  referenceLink="https://user-images.githubusercontent.com/63354527/213631255-2f42fa14-1854-4ec4-869e-196d028c103a.png"
+  description="사용자 모드에서 커널 모드로의 전환"
+/>
+
+<br />
+
+동작의 이중 모드는 잘못된 사용자로부터 운영체제를, 그리고 잘못된 사용자 서로를 보호하는 방법을
+우리에게 제공한다. 우리는 이러한 악영향을 끼칠 수 있는 일부 명령을
+**특권 명령**(**privileged instruction**)으로 지정함으로써
+이러한 보호를 달성한다. 하드웨어는 특권 명령이 커널 모드에서만 수행되도록 허용한다. 사용자 모드에서
+특권 명령을 수행하려고 시도하면, 하드웨어는 이를 실행하지 않고, 불법적인 명령으로 간주해 운영체제로
+트랩을 건다.
+
+커널 모드로 전환하는 명령어가 특권 명령어의 예이다. 다른 예로는 I/O 제어, 타이머 관리 및 인터럽트 관리가
+있다.
+
+시스템 콜은 사용자 프로그램이 자신을 대신하여 운영체제가 수행하도록 지정되어 있는 작업을 운영체제에게
+요청할 수 있는 방법을 제공한다. 시스템 콜은 컴퓨터 시스템의 처리기가 지원하는 기능에 따라 다양한 방법으로
+호출된다. 어떠한 형태를 가지든 시스템 콜은 운영체제에 의해 수행될 동작을 사용자 프로세스가 요청할 수 있게
+한다. 시스템 콜은 일반적으로 인터럽트 벡터의 특정 위치로 트랩을 거는 형태를 취한다. 이 트랩은 보통의
+trap 명령어를 통해 수행되지만 몇몇 시스템은 syscall 이라는 특정 명령어를 가지기도 한다.
+
+시스템 콜이 수행될 때 시스템 콜은 하드웨어에 의해 하나의 소프트웨어 인터럽트로 취급된다.
+제어가 인터럽트 벡터를 통해 운영체제 내의 서비스 루틴으로 전달되고, 모드 비트가 커널 모드로 설정된다.
+시스템 콜 서비스 루틴은 운영체제의 일부이다. 커널은 인터럽트를 발생시킨 명령을 검사하여 어떤 시스템 콜이
+발생했는지를 결정한다. 이 떄 전달된 인수가 사용자 프로그램이 요청하는 서비스 유형을 표시한다.
+요청이 필요로 하는 추가의 정보는 레지스터, 스택 또는 메모리로(이때는 메모리 위치에 대한 포인터가
+레지스터에 전달된다) 전달될 수 있다. 커널은 인수가 정확하고 합법적인지를 검증하고 요청을 수행한 후
+제어를 시스템 콜 다음 명령으로 복귀한다.
