docs: 파일 시스템 관리

--- a/docs/os/공룡책/서론.mdx
+++ b/docs/os/공룡책/서론.mdx
@@ -571,3 +571,26 @@ CPU 이용률과 사용자에 대한 컴퓨터의 응답 속도를 개선하기 
 기법에는 여러 종류가 있다. 이러한 기법은 메모리 관리에 대한 여러 접근 방법을 반영하는데,
 각 알고리즘의 효율성은 특정 상황에 따라 다르다. 특정 시스템에 대한 메모리 관리 기법의
 선택은 여러 요인에 의해 결정되지만, 특히 시스템의 하드웨어 설계에 좌우된다.
+
+### 파일 시스템 관리(File System Management)
+
+운영체제는 저장장치의 물리적 특성을 추상화하여 논리적인 저장 단위인 파일을 정의한다.
+운영체제는 파일을 물리적 매체로 매핑하여, 저장장치를 통해 이들 파일에 접근한다.
+
+파일은 파일 생성자에 의해 정의된 관련 정보의 집합체이다. 일반적으로 파일은 프로그램과
+테이터를 나타낸다. 데이터 파일은 숫자, 영문자, 영숫자 등으로 구성된다.
+
+운영체제는 대량 저장 매체와 그것을 제어하는 장치를 관리함으로써 파일의 추상적인 개념을
+구현한다. 또한, 파일은 사용하기 쉽도록 통상 디렉터리들로 구성된다. 다수의 사용자가
+파일에 접근하려고 할 때는 누구에 의해서, 그리고 어떤 방법으로 파일이 접근되어야
+하는가를 통제하는 것이 바람직하다.
+
+운영체제는 파일 관리를 위하여 다음과 같은 일을 담당한다.
+
+- 파일의 생성 및 제거
+- 디렉터리의 생성 및 제거
+- 파일과 디렉터리를 조작하기 위한 프리미티브의 제공
+- 파일을 보조저장장치로 매핑
+- 안정적인(비휘발성) 저장 매체에 파일을 백업
+
+### 대용량 저장장치 관리(Mass Storage Management)
