docs: mass storage management

--- a/docs/os/공룡책/서론.mdx
+++ b/docs/os/공룡책/서론.mdx
@@ -594,3 +594,24 @@ CPU 이용률과 사용자에 대한 컴퓨터의 응답 속도를 개선하기 
 - 안정적인(비휘발성) 저장 매체에 파일을 백업
 
 ### 대용량 저장장치 관리(Mass Storage Management)
+
+운영체제는 보조저장장치 관리와 관련하여 다음 활동을 담당한다.
+
+- 마운팅과 언마운팅
+- 사용 가능 공간(free-space)의 관리
+- 저장장소 할당
+- 디스크 스케줄링
+- 저장장치 분할
+- 보호
+
+보조저장장치는 매우 빈번하게 폭넓게 사용되므로, 효율적으로 사용해야 한다.
+컴퓨터의 전체 동작 속도는 보조저장장치 서브시스템과 그것을 조작하는 알고리즘의 속도에
+의해 결정될 수 있다. 동시에 보조저장장치보다 더 느리고 비용은 적게 들고 때로는 용량이 더 큰
+장치를 필요로 하는 경우도 많다. 디스크 데이터 백업, 가끔 쓰이는 데이터 및 장기간 보존이
+필요한 데이터를 저장하는 것이 대표적인 예이다. 자기 데이프 드라이브와 그 테이프, CD와
+DVD 및 Blu-ray 드라이브와 플래터들은 전형적인 3차 저장장치의 예이다.
+
+3차 저장장치는 시스템 성능에는 중요하지 않지만 운영체제에 의해 관리되어야만 한다. 어떤
+운영체제들은 이 역할을 직접 수행하며 다른 운영체제들은 이 역할을 응용 프로그램에게 맡기기도
+한다. 운영체제가 제공해야 할 기능에는 마운트와 언마운트 기능, 프로세스의 배타적 사용을 위한
+장치의 할당과 반환 그리고 보조저장장치로부터 3차 저장장치로의 데이터 이주 등이 포함된다.
