docs: computing environments

--- a/docs/data-structure/hash-table/index.mdx
+++ b/docs/data-structure/hash-table/index.mdx
@@ -14,7 +14,7 @@ import Image from '@site/src/components/Image';
 ## 해싱이란?(Hashing)
 
 해싱이란 임의의 길이의 값을 해시 `함수(Hash Function)`을 사용하여 고정된 크기의 값으로 변환하는
-작업을 말한다. 이 함수에 의해 반환된 값을 `hascode`라고 한다.
+작업을 말한다. 이 함수에 의해 반환된 값을 `hashcode`라고 한다.
 
 어설픈 해시 함수를 통해서 key 값들을 결정하면 동일한 값이 도출될 수가 있다. 이렇게 되면 동일한 key
 값에 복수개의 데이터가 하나의 테이블에 존재할 수 있게 되는 것인데 이를 `Collision`이라고 한다.
