docs: system services

--- a/docs/os/공룡책/운영체제-구조.mdx
+++ b/docs/os/공룡책/운영체제-구조.mdx
@@ -320,3 +320,35 @@ shard_memeory_create()와 shared_memory_attach() 시스템 콜을 사용한다.
 
 통상 보호를 지원하는 시스템 콜은 set_permission()과 get_permission()을 포함하는데,
 파일과 디스크와 같은 자원의 허가 권한을 설정하는데 이용된다.
+
+## 시스템 서비스(System Services)
+
+시스템 서비스는, 시스템 유틸리티로도 알려진 프로그램 개발과 실행을 위해 더 편리한 환경을
+제공한다. 그들 중 몇몇은 단순히 시스템 콜에 대한 사용자 인터페이스이며, 반면에 나머지는
+훨씬 더 복잡하다. 이들은 다음 몇 가지 범주로 분류할 수 있다.
+
+- 파일 관리: 이들 프로그램은 파일과 디렉터리를 생성, 삭제, 복사, 개명(rename), 인쇄,
+  열거하고, 그리고 일반적으로 조작한다.
+- 상태 정보: 어떤 프로그램은 단순히 시스템에게 날짜, 시간, 사용 가능한 메모리와 디스크의 양,
+  사용자 수, 혹은 비슷한 상태 정보를 묻는다. 복잡한 프로그램들은 상세한 성능, 로깅 및 디버깅
+  정보를 제공한다. 통상 이 프로그램들은 정보를 단말기나 다른 출력 장치 혹은 파일로 포맷하여
+  인쇄하거나 GUI의 윈도우에 표시한다. 몇몇 시스템은 환경 설정 정보를 저장하고 검색할 수 있는
+  등록(registry) 기능을 지원하기도 한다.
+- 파일 변경: 디스크나 다른 저장 장치에 저장된 파일의 내용을 생성하고 변경하기 위해 다수의
+  문장 편집기(text editor)를 사용할 수 있다. 파일의 내용을 검색하거나 변환하기 위한 특수
+  명령어가 제공되기도 한다.
+- 프로그래밍 언어 지원: 일반적인 프로그래밍 언어들에 대한 컴파일러, 어셈블러, 디버거 및
+  해석기가 종종 운영체제와 함께 사용자에게 제공되거나 별도로 다운로드 받을 수 있다.
+- 프로그램 적재와 수행: 일단 프로그램이 어셈블되거나 컴파일된 후, 그것이 수행되려면 반드시
+  메모리에 적재되어야 한다. 시스템은 절대 로더(absolute loader),
+  재배치 가능 로더(relocatable loader), 링키지 에디터(linkage editor)와 중첩 로더
+  (overlay loader)등을 제공할 수 있다. 또한 고급어나 기계어를 위한 디버깅 시스템도
+  필요하다.
+- 통신: 이들 프로그램은 프로세스, 사용자, 그리고 다른 컴퓨터 시스템들 사이에 가상 접속을
+  이루기 위한 기법을 제공한다.
+- 백그라운드 서비스: 모든 범용 시스템은 부트할 때 특정 시스템 프로그램을 시작시킬 수 있는
+  방법을 가지고 있다. 이러한 프로세스 중 일부는 자신들의 한 일을 완수하면 종료하는 반면에,
+  일부는 시스템이 정지될 때까지 계속해서 실행되는 프로세스도 존재한다. 항상 실행되는 시스템
+  프로그램 프로세스는 서비스, 서브 시스템 또는 데몬으로 알려져있다. 전형적인 시스템은 수십개의
+  데몬을 가지고 있다. 게다가 운영체제가 중요한 활동을 커널 문맥에서가 아니라 사용자 문맥에서
+  실행해야 하는 경우, 데몬을 이용해서 이 작업을 수행할 수 있다.
